Add a pkgconfig file for libXvMCW
Mesa needs to link with this for testing, as do others presumably.
Having a pkg-config file makes this much easier

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=110735

v2: - remove xv from Requires and Requires.private

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,7 +22,7 @@
 SUBDIRS = src include wrapper
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = xvmc.pc
+pkgconfig_DATA = xvmc.pc xvmc-wrapper.pc
 
 dist_doc_DATA = XvMC_API.txt
 
