--- a/xvmc.pc.in
+++ b/xvmc.pc.in
@@ -6,7 +6,7 @@ includedir=@includedir@
 Name: XvMC
 Description: The XvMC Library
 Version: @PACKAGE_VERSION@
-Requires: xproto videoproto xv
-Requires.private: x11 xext xv
+Requires: xproto videoproto
+Requires.private: x11 xext
 Cflags: -I${includedir}
 Libs: -L${libdir} -lXvMC
